--- a/index.html
+++ b/index.html
@@ -14,7 +14,20 @@
         <h1>Animation studio</h1>
 
         <div id="app">
-            {{ message }}
+            <svg id="screen" width="1000" height="400">
+
+            </svg>
+            <div id="frame-tracker-row">
+                <span class="studio-label">Frame:</span>
+                <svg id="frame-tracker" viewBox="0 0 1010 20">
+                    <rect class="background" width="1010" height="20" />
+                    <text x="10" y="13">1</text>
+                    <text v-for="i in numFrames" :x="i * 50" y="13">
+                        {{ i * 5 }}
+                    </text>
+                    <line class="tick-mark" v-for="i in numFrames" :x1="i * 10" :x2="i * 10" y1="15" y2="20" />
+                </svg>
+            </div>
         </div>
 
         <script src="js/studio.js"></script>
