--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
             </svg>
             <div id="frame-tracker-row">
-                <span class="studio-label">Frame:</span>
+                <div class="studio-label">Frame:</div>
                 <svg id="frame-tracker" viewBox="0 0 1010 20">
                     <rect class="background" width="1010" height="20" />
                     <text x="10" y="13">1</text>
@@ -26,6 +26,12 @@
                         {{ i * 5 }}
                     </text>
                     <line class="tick-mark" v-for="i in numFrames" :x1="i * 10" :x2="i * 10" y1="15" y2="20" />
+                </svg>
+            </div>
+            <div class="attribute-control-row">
+                <div class="studio-label">x:</div>
+                <svg class="attribute-control" v-on:mousemove="drag" v-on:mouseup="deselect">
+                    <control-point :position="{ x: 20, y: 40}"/>
                 </svg>
             </div>
         </div>
