--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
             <svg id="screen" width="1000" height="400">
 
             </svg>
-            <div id="frame-tracker-row">
+
+            <div class="controls-container">
                 <div class="studio-label">Frame:</div>
                 <svg id="frame-tracker" viewBox="0 0 1010 20">
                     <rect class="background" width="1010" height="20" />
@@ -27,8 +28,9 @@
                     </text>
                     <line class="tick-mark" v-for="i in numFrames" :x1="i * 10" :x2="i * 10" y1="15" y2="20" />
                 </svg>
+                <div class="studio-label">x</div>
+                <attribute-control :height="height" />
             </div>
-            <attribute-control name="x" :height="height" />
         </div>
 
         <script src="js/studio.js"></script>
