--- a/index.html
+++ b/index.html
@@ -15,21 +15,14 @@
 
         <div id="app">
             <svg id="screen" width="1000" height="400">
-
             </svg>
 
             <div class="controls-container">
                 <div class="studio-label">Frame:</div>
-                <svg id="frame-tracker" viewBox="0 0 1010 20">
-                    <rect class="background" width="1010" height="20" />
-                    <text x="10" y="13">1</text>
-                    <text v-for="i in numFrames" :x="i * 50" y="13">
-                        {{ i * 5 }}
-                    </text>
-                    <line class="tick-mark" v-for="i in numFrames" :x1="i * 10" :x2="i * 10" y1="15" y2="20" />
-                </svg>
+                <frame-tracker />
                 <div class="studio-label">x</div>
                 <attribute-control :height="height" />
+                <p>asdsad</p>
             </div>
         </div>
 
