Get numFrames working on fraame tracker

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
             <div class="controls-container">
                 <div class="studio-label">Frame:</div>
-                <frame-tracker></frame-tracker>
+                <frame-tracker :num-frames="numFrames"></frame-tracker>
                 <div class="studio-label">x</div>
                 <attribute-control :height="height"></attribute-control>
             </div>
