--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
             <div class="controls-container">
                 <div class="studio-label">Frame:</div>
-                <frame-tracker :num-frames="numFrames"></frame-tracker>
+                <frame-tracker :num-frames="numFrames" :selected-frame="selectedFrame"></frame-tracker>
                 <div class="studio-label">x</div>
-                <attribute-control :height="height"></attribute-control>
+                <attribute-control :height="height" :selected-frame="selectedFrame"></attribute-control>
             </div>
         </div>
 
