Get working actor update

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <div id="app">
             <svg id="screen" width="1000" height="400">
-                <rect class="actor" :x="objectX" y="200" width="80" height="80">
+                <rect class="actor" :x="actor.x" :y="actor.y" width="80" height="80">
             </svg>
 
             <div class="controls-container">
