--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 
             <div class="controls-container">
                 <frame-tracker :num-frames="numFrames" :selected-frame="selectedFrame"></frame-tracker>
-                <attribute-control name="x" :height="height" :selected-frame="selectedFrame"></attribute-control>
+                <attribute-control v-for="(value, name) in actor" :name="name" :height="height" :selected-frame="selectedFrame">
+                </attribute-control>
             </div>
         </div>
 
